--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_PROGRAMS_ENDPOINT=restapi.aptonline.org:8880/lists/vRESTProgramsOnlyByTitle?dataSource=programsscope&documents=true
+REACT_APP_PROGRAMS_ENDPOINT=http://restapi.aptonline.org:8880/lists/vRESTProgramsOnlyByTitle?dataSource=programsscope&documents=true
+REACT_APP_AUTH_ENDPOINT='http://restapi.aptonline.org:8880/api/v1/auth'
