--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "underwriting-crud",
-  "version": "0.1.0",
+  "name": "nomi",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
