making progress on underwriting

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_PROGRAMS_ENDPOINT=http://restapi.aptonline.org:8880/lists/vRESTProgramsOnlyByTitle?dataSource=programsscope&documents=true
-REACT_APP_AUTH_ENDPOINT='http://restapi.aptonline.org:8880/api/v1/auth'
+REACT_APP_HOST_ENDPOINT=http://restapi.aptonline.org:8880/api/v1
+REACT_APP_UNDERWRITING_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/vUnderwritersGroupedByIDNumber?dataSource=underwritingscope&category={{IDNUMBER}}
