Beginning to add a createUnderwriter function

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-REACT_APP_PROGRAMS_ENDPOINT=http://restapi.aptonline.org:8880/lists/vRESTProgramsOnlyByTitle?dataSource=programsscope&documents=true
+REACT_APP_LIST_ENDPOINT=http://restapi.aptonline.org:8880/lists/{{VIEW}}?dataSource={{SCOPE}}&documents=true
+REACT_APP_QUERY_BY_UNID_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document/{{UNID}}?dataSource={{SCOPE}}
 REACT_APP_HOST_ENDPOINT=http://restapi.aptonline.org:8880/api/v1
-REACT_APP_UNDERWRITING_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/vUnderwritersGroupedByIDNumber?dataSource=underwritingscope&category={{IDNUMBER}}
+REACT_APP_QUERY_BY_ID_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/{{VIEW}}?dataSource={{SCOPE}}&category={{ID}}
+REACT_APP_CREATE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document?dataSource={{SCOPE}}
