--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_QUERY_BY_UNID_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/docume
 REACT_APP_HOST_ENDPOINT=http://restapi.aptonline.org:8880/api/v1
 REACT_APP_QUERY_BY_ID_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/{{VIEW}}?dataSource={{SCOPE}}&category={{ID}}
 REACT_APP_CREATE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document?dataSource={{SCOPE}}
+REACT_APP_POSTSAVE_ENDPOINT=http://restapi.aptonline.org:8880/{{DATABASE}}.nsf/{{POSTSAVE}}PostSave?OpenAgent
