--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
+    "react-bootstrap-icons": "^1.11.5",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
