--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-REACT_APP_LIST_ENDPOINT=http://restapi.aptonline.org:8880/lists/{{VIEW}}?dataSource={{SCOPE}}&documents=true
+REACT_APP_LIST_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/{{VIEW}}?dataSource={{SCOPE}}&documents=true
 REACT_APP_QUERY_BY_UNID_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document/{{UNID}}?dataSource={{SCOPE}}
 REACT_APP_HOST_ENDPOINT=http://restapi.aptonline.org:8880/api/v1
 REACT_APP_QUERY_BY_ID_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/{{VIEW}}?dataSource={{SCOPE}}&category={{ID}}
 REACT_APP_CREATE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document?dataSource={{SCOPE}}
-REACT_APP_POSTSAVE_ENDPOINT=http://restapi.aptonline.org:8880/{{DATABASE}}.nsf/{{POSTSAVE}}PostSave?OpenAgent
-REACT_APP_EDIT_ENDPOINT=http://restapi.aptonline.org:8880/document/{{UNID}}?dataSource={{SCOPE}}&mode={{MODE}}
-REACT_APP_DELETE_ENDPOINT=http://restapi.aptonline.org:8880/document/{{UNID}}?dataSource={{SCOPE}}&mode={{MODE}}
+REACT_APP_POSTSAVE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/{{DATABASE}}.nsf/{{POSTSAVE}}PostSave?OpenAgent
+REACT_APP_EDIT_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document/{{UNID}}?dataSource={{SCOPE}}&mode={{MODE}}
+REACT_APP_DELETE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document/{{UNID}}?dataSource={{SCOPE}}&mode={{MODE}}
