--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_CREATE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document?data
 REACT_APP_POSTSAVE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/{{DATABASE}}.nsf/{{POSTSAVE}}PostSave?OpenAgent
 REACT_APP_EDIT_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document/{{UNID}}?dataSource={{SCOPE}}&mode={{MODE}}
 REACT_APP_DELETE_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/document/{{UNID}}?dataSource={{SCOPE}}&mode={{MODE}}
+REACT_APP_UW_EPISODES_ENDPOINT=http://restapi.aptonline.org:8880/api/v1/lists/vRESTEpisodes?dataSource=programsscope&key={{ID}}
